2016.03.29 Kentaro Fukuchi <kentaro@fukuchi.org>
	* tests/view_qrcode.c:
	  - Added mask=-2 mode for debug purpose.

2016.02.21 Kentaro Fukuchi <kentaro@fukuchi.org>
	* configure.ac, tests/common.h, tests/view_qrcode.c:
	  - Migrated from SDL 1.2 to 2.0.
	* README, README.md:
	  - Improved the install instruction. (Thanks to Ronald Michaels)

2015.11.04 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrspec.h, mqrspec.h:
	  - Typo fix. (Thanks to @qianchenglenger)
	* qrenc.c:
	  - Merged pull-request #74. (Thanks to @mgorny)
	  - Added support for UTF8i and ANSIUTF8i formats that provide reverse
	    mappings of UTF8 and ANSIUTF8 formats respective. This is useful for
		black-on-white media.
	* configure.ac, Makefile.am, qrenc.c, rsecc.c:
	  - Added new configure option "--without-png". (closes #70)

2015.05.13 Kentaro Fukuchi <kentaro@fukuchi.org>
	* mqrspec.c:
	  - Typo fix.
	* README, README.md:
	  - Text format improved.
	* NEWS:
	  - Slightly updated.

2015.05.06 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrenc.c:
	  - New option "--svg-path" has been added, that uses a single path
	    instead of multiple rectangles to draw the modules.
		(cherry-picked from #41) (Thanks to @Oblomov)
	* tests/test_qrenc.sh, tests/test_images/.gitignore:
	  - Added an unfinished test script for qrencode has been added.

2015.05.05 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrencode.1.in, qrenc.c:
	  - Usage improved. (closes #62) (Thanks to @minus7)
	  - Typo fix. (Thanks to Ian Sweet (@Isweet))
	* README, README.md:
	  - The list of contributors updated: '@' prefix added for github
	    usernames.
	* qrenc.c:
	  - X Pixmap (XPM) support has been added. (closes #52)
	    (Thanks to @tklauser)
	* qrspec.h, mqrspec.h, qrencode.h:
	  - empty descriptions of some @params are filled.
	* rsecc.[ch], README:
	  - Short note about the credit has been improved.
	* Some code cleanups.

2015.05.04 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrenc.c: