@@ -154,5 +154,6 @@ Copyright (C) 2002, 2003, 2004, 2006 Phil Karn, KA9Q
   Hassan Hajji, Emmanuel Blot, ßlúèÇhîp, Heiko Becker, Gavin Andresen,
   David Binderman, @ralgozino, Sean McMurray, @win32asm, Antenore Gatta,
   Yoshimichi Inoue, Sunil Maganally, Norman Gray, Danomi Manchego,
-  Vlad Bespalov, @minus7, Ian Sweet, @qianchenglenger, Ronald Michaels
+  Vlad Bespalov, @minus7, Ian Sweet, @qianchenglenger, Ronald Michaels,
+  Yuji Ueno
                         - bug report / suggestion
